scala/tiny_scala/src/main/java/TinyScalaParser.java
// Generated from /Users/wrathen/Documents/bmstu/playground/scala/tiny_scala/grammar/TinyScala.g4 by ANTLR 4.13.2
package com.wrathenn.compilers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TinyScalaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Id=30, OpPrecedence1=31, 
		OpPrecedence2=32, OpPrecedence3=33, OpPrecedence4=34, OpPrecedence5=35, 
		OpPrecedence6=36, OpPrecedence7=37, OpPrecedence8=38, OpPrecedence9=39, 
		BooleanLiteral=40, CharacterLiteral=41, IntegerLiteral=42, StringLiteral=43, 
		FloatingPointLiteral=44, Varid=45, BoundVarid=46, Paren=47, Delim=48, 
		Minus=49, Colon=50, NL=51, NEWLINE=52, WS=53, COMMENT=54, LINE_COMMENT=55;
	public static final int
		RULE_compilationUnit = 0, RULE_tmplDef = 1, RULE_tmplDefCaseClass = 2, 
		RULE_tmplDefObject = 3, RULE_objectIsMain = 4, RULE_templateBody = 5, 
		RULE_templateStat = 6, RULE_classParamClause = 7, RULE_classParams = 8, 
		RULE_classParam = 9, RULE_expr = 10, RULE_infixExpr = 11, RULE_prefixExpr = 12, 
		RULE_newClassExpr = 13, RULE_simpleExpr1 = 14, RULE_argumentExprs = 15, 
		RULE_exprs = 16, RULE_def_ = 17, RULE_patVarDef = 18, RULE_patDef = 19, 
		RULE_funDef = 20, RULE_block = 21, RULE_funSig = 22, RULE_params = 23, 
		RULE_param = 24, RULE_type_ = 25, RULE_simpleType = 26, RULE_arrayType = 27, 
		RULE_types = 28, RULE_literal = 29, RULE_ids = 30, RULE_stableId = 31, 
		RULE_opNoPrecedence = 32, RULE_pattern = 33, RULE_pattern1 = 34, RULE_patterns = 35, 
		RULE_enumerators = 36, RULE_generator = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "tmplDef", "tmplDefCaseClass", "tmplDefObject", "objectIsMain", 
			"templateBody", "templateStat", "classParamClause", "classParams", "classParam", 
			"expr", "infixExpr", "prefixExpr", "newClassExpr", "simpleExpr1", "argumentExprs", 
			"exprs", "def_", "patVarDef", "patDef", "funDef", "block", "funSig", 
			"params", "param", "type_", "simpleType", "arrayType", "types", "literal", 
			"ids", "stableId", "opNoPrecedence", "pattern", "pattern1", "patterns", 
			"enumerators", "generator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'case class'", "'object'", "'extends'", "'App'", "'{'", "'}'", 
			"';'", "'('", "')'", "','", "'if'", "'else'", "'while'", "'do'", "'for'", 
			"'yield'", "'return'", "'='", "'new'", "'def'", "'val'", "'var'", "'Array['", 
			"']'", "'null'", "'.'", "'|'", "'_'", "'<-'", null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'-'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "Id", "OpPrecedence1", "OpPrecedence2", 
			"OpPrecedence3", "OpPrecedence4", "OpPrecedence5", "OpPrecedence6", "OpPrecedence7", 
			"OpPrecedence8", "OpPrecedence9", "BooleanLiteral", "CharacterLiteral", 
			"IntegerLiteral", "StringLiteral", "FloatingPointLiteral", "Varid", "BoundVarid", 
			"Paren", "Delim", "Minus", "Colon", "NL", "NEWLINE", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TinyScala.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TinyScalaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public List<TmplDefContext> tmplDef() {
			return getRuleContexts(TmplDefContext.class);
		}
		public TmplDefContext tmplDef(int i) {
			return getRuleContext(TmplDefContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(TinyScalaParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(TinyScalaParser.NL, i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL) {
					{
					{
					setState(76);
					match(NL);
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(82);
				tmplDef();
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						match(NL);
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2251799813685254L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TmplDefContext extends ParserRuleContext {
		public TmplDefCaseClassContext tmplDefCaseClass() {
			return getRuleContext(TmplDefCaseClassContext.class,0);
		}
		public TmplDefObjectContext tmplDefObject() {
			return getRuleContext(TmplDefObjectContext.class,0);
		}
		public TmplDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tmplDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterTmplDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitTmplDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitTmplDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TmplDefContext tmplDef() throws RecognitionException {
		TmplDefContext _localctx = new TmplDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tmplDef);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				tmplDefCaseClass();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				tmplDefObject();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TmplDefCaseClassContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(TinyScalaParser.Id, 0); }
		public ClassParamClauseContext classParamClause() {
			return getRuleContext(ClassParamClauseContext.class,0);
		}
		public TmplDefCaseClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tmplDefCaseClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterTmplDefCaseClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitTmplDefCaseClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitTmplDefCaseClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TmplDefCaseClassContext tmplDefCaseClass() throws RecognitionException {
		TmplDefCaseClassContext _localctx = new TmplDefCaseClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tmplDefCaseClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(98);
			match(Id);
			setState(99);
			classParamClause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TmplDefObjectContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(TinyScalaParser.Id, 0); }
		public TemplateBodyContext templateBody() {
			return getRuleContext(TemplateBodyContext.class,0);
		}
		public ObjectIsMainContext objectIsMain() {
			return getRuleContext(ObjectIsMainContext.class,0);
		}
		public TmplDefObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tmplDefObject; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterTmplDefObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitTmplDefObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitTmplDefObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TmplDefObjectContext tmplDefObject() throws RecognitionException {
		TmplDefObjectContext _localctx = new TmplDefObjectContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tmplDefObject);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__1);
			setState(102);
			match(Id);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(103);
				objectIsMain();
				}
			}

			setState(106);
			templateBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectIsMainContext extends ParserRuleContext {
		public ObjectIsMainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectIsMain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterObjectIsMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitObjectIsMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitObjectIsMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectIsMainContext objectIsMain() throws RecognitionException {
		ObjectIsMainContext _localctx = new ObjectIsMainContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_objectIsMain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__2);
			setState(109);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateBodyContext extends ParserRuleContext {
		public List<TemplateStatContext> templateStat() {
			return getRuleContexts(TemplateStatContext.class);
		}
		public TemplateStatContext templateStat(int i) {
			return getRuleContext(TemplateStatContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(TinyScalaParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(TinyScalaParser.NL, i);
		}
		public List<TerminalNode> WS() { return getTokens(TinyScalaParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TinyScalaParser.WS, i);
		}
		public TemplateBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterTemplateBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitTemplateBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitTemplateBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateBodyContext templateBody() throws RecognitionException {
		TemplateBodyContext _localctx = new TemplateBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_templateBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(111);
				match(NL);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(117);
				match(T__4);
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL || _la==WS) {
					{
					{
					setState(118);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==WS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(T__5);
				}
				break;
			case 2:
				{
				setState(125);
				match(T__4);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NL || _la==WS) {
					{
					{
					setState(126);
					_la = _input.LA(1);
					if ( !(_la==NL || _la==WS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(132);
						templateStat();
						setState(134); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(133);
							_la = _input.LA(1);
							if ( !(_la==T__6 || _la==NL) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
							}
							setState(136); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==T__6 || _la==NL );
						}
						} 
					}
					setState(142);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				setState(143);
				templateStat();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6 || _la==NL) {
					{
					{
					setState(144);
					_la = _input.LA(1);
					if ( !(_la==T__6 || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(150);
				match(T__5);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TemplateStatContext extends ParserRuleContext {
		public Def_Context def_() {
			return getRuleContext(Def_Context.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TemplateStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterTemplateStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitTemplateStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitTemplateStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TemplateStatContext templateStat() throws RecognitionException {
		TemplateStatContext _localctx = new TemplateStatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_templateStat);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__19:
			case T__20:
			case T__21:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				def_();
				}
				break;
			case T__7:
			case T__10:
			case T__12:
			case T__13:
			case T__14:
			case T__16:
			case T__18:
			case T__24:
			case Id:
			case OpPrecedence1:
			case OpPrecedence2:
			case OpPrecedence3:
			case OpPrecedence4:
			case OpPrecedence5:
			case OpPrecedence6:
			case OpPrecedence7:
			case OpPrecedence8:
			case OpPrecedence9:
			case BooleanLiteral:
			case CharacterLiteral:
			case IntegerLiteral:
			case StringLiteral:
			case FloatingPointLiteral:
			case Minus:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassParamClauseContext extends ParserRuleContext {
		public ClassParamsContext classParams() {
			return getRuleContext(ClassParamsContext.class,0);
		}
		public TerminalNode NL() { return getToken(TinyScalaParser.NL, 0); }
		public ClassParamClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classParamClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).enterClassParamClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TinyScalaListener ) ((TinyScalaListener)listener).exitClassParamClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TinyScalaVisitor ) return ((TinyScalaVisitor<? extends T>)visitor).visitClassParamClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassParamClauseContext classParamClause() throws RecognitionException {
		ClassParamClauseContext _localctx = new ClassParamClauseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classParamClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(158);
				match(NL);
				}
			}
